manifests/memory-test.yaml
apiVersion: v1
kind: Pod

metadata:
  name: memory-test

spec:
  containers:
  - name: memory-test

    image: polinux/stress

    command:
    - stress

    args:
    - --vm
    - "1"
    - --vm-bytes
    - "200M"
    - --vm-hang
    - "1"

    resources:
      requests:
        memory: "50Mi"

      limits:
        memory: "100Mi"

  restartPolicy: Never
